Too long. My laptop's battery can't handle longer without battery. Sync-it-all rn!

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -1,2 +1,5 @@
 // Custom stylesheet goes here.
 // Um, nothing particular.
+//
+// You can install base16-syntax instead
+//   apm install base16-syntax
